--- a/_config.yml
+++ b/_config.yml
@@ -104,5 +104,5 @@ theme: butterfly
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repository: git@github.com:HWYWL/HWYWL.github.io.git
+  repository: git@github.com:zzh1994/Sean.github.io.git
   branch: master
